--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             font-weight: 900;
             font-size: larger;
             background:white;
+            overflow: hidden;
         }
         .btns{
           padding: 5px;
